--- a/src/style/addnote.css
+++ b/src/style/addnote.css
@@ -20,7 +20,6 @@
     border-radius: 0.5rem;
 }
 
-.note-label-container ,
 .note-priority-container {
     border: 1px solid var(--gray-400);
     padding-top: 0.6rem;
@@ -32,4 +31,86 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.note-tags-container {
+  padding-top: 0.6rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.tags-input {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  min-height: 48px;
+  width: 480px;
+  padding: 0 8px;
+  border: 1px solid rgb(214, 216, 218);
+  border-radius: 6px;
+}
+.tags-input:focus-within {
+  border: 1px solid #0052cc;
+}
+
+.tag-input {
+  flex: 1;
+  border: none;
+  height: 46px;
+  font-size: 14px;
+  padding: 4px 0 0 0;
+}
+
+.tag-input:focus {
+  outline: transparent;
+}
+
+textarea {
+  height: 3rem;
+}
+
+#tags {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 8px 0 0 0;
+}
+
+.tag {
+  width: auto;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  padding: 0 8px;
+  font-size: 14px;
+  list-style: none;
+  border-radius: 6px;
+  margin: 0 8px 8px 0;
+  background: #0052cc;
+}
+.tag-title {
+  margin-top: 3px;
+}
+.tag-close-icon {
+  display: block;
+  width: 16px;
+  height: 16px;
+  line-height: 16px;
+  text-align: center;
+  font-size: 14px;
+  margin-left: 8px;
+  color: #0052cc;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 567px) {
+  .tags-input {
+    width: calc(100vw - 32px);
+  }
 }
